--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_storage: ^2.1.1
   cached_network_image: ^3.3.0
   intl: ^0.18.1
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
